--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,31 @@
+*{
+  box-sizing: border-box;
+  padding:0;
+  margin:0;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+/* 
+body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+} */
+
 .App {
   text-align: center;
 }
