--- a/client/src/warehouse/Directions.css
+++ b/client/src/warehouse/Directions.css
@@ -2,7 +2,7 @@
     display: flex;
     height: 100vh;
     width: 100vw;
-    background-color: green;
+    background-color: #ccc6c6;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -12,11 +12,13 @@
 .jerry_directions2_map_container{
     height: 100%;
     width: 100%;
+    flex:3
 }
 
 .jerry_directions2_rider_info{
-    height: 100%;
-    width: 40%;
-}
+    /* height: 100%; */
+    /* width: 40%; */
+    flex: 1
+    }
 
 
