--- a/client/src/warehouse/UploadExcel.css
+++ b/client/src/warehouse/UploadExcel.css
@@ -18,4 +18,77 @@
     width: 80vw;
     border-radius: 10px;
     background-color: rgb(87, 87, 213);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+}
+
+
+.jj_ue_btn_container{
+    flex:1;
+}
+.jj_ue_upload_container{
+    width: 100%;
+    flex:5;
+    /* background-color: green; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+    height: 100%;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+/* .jj_ue_left{
+    background-color: yellow;
+} */
+
+.jj_ue_right{
+    /* background-color: orange; */
+    height: 100%;
+}
+
+.jj_ue_left, .jj_ue_right
+{
+    flex:1;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 50%;
+    font-size: 25px;
+    color:white;
+}
+
+.input_field1, .input_field1:active, .input_field1:focus {
+    border: none;
+    /* height: 40px; */
+    width: 100%;
+    outline: none;
+    background-color: transparent;
+    font-size: 55px;
+    color:white;
+    text-align: center;
+}
+
+.jj_ue_left{
+    /* background-color: green; */
+    width: 100%;
+    height: 60%;
+    border-right: 2px solid white;
 }
