--- a/client/src/warehouse/Directions.css
+++ b/client/src/warehouse/Directions.css
@@ -16,9 +16,26 @@
 }
 
 .jerry_directions2_rider_info{
-    /* height: 100%; */
+    height: 80%;
     /* width: 40%; */
-    flex: 1
-    }
+    flex: 1;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    /* align-items: center; */
+    /* background-color: aqua; */
+    height: 100%;
+}
 
 
+.jerry_routes_stats{
+    display: flex;
+    justify-self: start;
+    width: 100%;
+    padding-top: 10vh;
+    /* justify-content: center; */
+    align-self: flex-start;
+    /* background-color: green; */
+    align-items: center;
+    flex-direction: column;
+}
