--- a/client/src/warehouse/Directions.css
+++ b/client/src/warehouse/Directions.css
@@ -2,7 +2,7 @@
     display: flex;
     height: 100vh;
     width: 100vw;
-    background-color: #ccc6c6;
+    background-color: #cdc6c6;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -15,6 +15,10 @@
     flex:3
 }
 
+.jerry_routes_bottom{
+    overflow: scroll;
+    flex: 3;
+}
 .jerry_directions2_rider_info{
     height: 80%;
     /* width: 40%; */
@@ -23,8 +27,9 @@
     flex-direction: column;
     justify-content: space-around;
     /* align-items: center; */
-    /* background-color: aqua; */
+    background-color: #c3c3f0;
     height: 100%;
+    overflow: scroll;
 }
 
 
@@ -32,10 +37,13 @@
     display: flex;
     justify-self: start;
     width: 100%;
-    padding-top: 10vh;
+    flex:2;
     /* justify-content: center; */
     align-self: flex-start;
     /* background-color: green; */
     align-items: center;
     flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
 }
