--- a/client/src/warehouse/RiderCard.css
+++ b/client/src/warehouse/RiderCard.css
@@ -1,12 +1,35 @@
 .jerry_ridercard_container{
-    height: "200px";
+    /* height: "400px"; */
+    height: 15vh;
     width: 100%;
-    background-color: red;
+    background-color: rgb(112, 112, 234);
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     margin: 10px 0;
+    /* padding: 5px 0; */
     align-items: center;
 
+}
+
+.jerry_ridercard_color{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.jerry_ridercard_colorblock{
+
+    width: 30%;
+    height: 10vh;
+    /* background-color: green; */
+}
+.jerry_ridercard_stats{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex: 5;
+    flex-direction: column;
+    /* background-color: aliceblue; */
 }
