--- a/client/src/rider/GoogleMapsDirections.css
+++ b/client/src/rider/GoogleMapsDirections.css
@@ -31,4 +31,18 @@
     border-radius: 5px;
     margin: 10px;
     padding:5px;
+    display: flex;
+    flex-direction: row;
 }
+
+.DirectionCard_left{
+    flex:4;
+}
+
+.DirectionCard_right{
+    flex:1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
