--- a/client/src/warehouse/Directions.css
+++ b/client/src/warehouse/Directions.css
@@ -47,3 +47,13 @@
     justify-content: center;
     align-items: center;
 }
+
+.jerry_routes_stats_bottom{
+    /* background-color: green; */
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+
+}
