--- a/client/src/warehouse/UploadExcel.css
+++ b/client/src/warehouse/UploadExcel.css
@@ -61,7 +61,7 @@ input[type=number] {
     height: 100%;
 }
 
-.jj_ue_left, .jj_ue_right
+.jj_ue_left, .jj_ue_right, .jj_ue_left_no_border
 {
     flex:1;
     height: 100%;
@@ -92,3 +92,12 @@ input[type=number] {
     height: 60%;
     border-right: 2px solid white;
 }
+
+
+.jj_ue_left_no_border{
+    /* background-color: green; */
+    width: 100%;
+    height: 60%;
+    /* border-right: 2px solid white; */
+}
+
